--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   "devDependencies": {
     "@types/commander": "^2.12.2",
     "@types/node": "^11.10.4",
-    "commander": "^2.19.0",
     "typescript": "^3.3.3333"
+  },
+  "dependencies": {
+    "boxen": "^3.0.0",
+    "colors": "^1.3.3",
+    "commander": "^2.19.0"
   }
 }
